# docker-cleanup-pro

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  Dockerfile  FAQ.md  INSTALL.md  MANIFEST.in  Makefile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml
docker_cleanup/: __init__.py  cleanup.py  cli.py
examples/: automated_cleanup.py  basic_usage.py
tests/: __init__.py  test_cleanup.py  test_cli.py
