[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-cleanup-pro"
version = "1.1.0"
description = "Smart Docker cleanup that saves disk space without breaking things"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ahmad Bilal", email = "realahmad001@gmail.com"}
]
keywords = ["docker", "cleanup", "disk-space", "devops", "containers"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "docker>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ahmad0303/docker-cleanup-pro"
"Bug Tracker" = "https://github.com/ahmad0303/docker-cleanup-pro/issues"
Documentation = "https://github.com/ahmad0303/docker-cleanup-pro#readme"
"Source Code" = "https://github.com/ahmad0303/docker-cleanup-pro"

[project.scripts]
docker-cleanup = "docker_cleanup.cli:main"

[tool.setuptools]
packages = ["docker_cleanup"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=docker_cleanup --cov-report=term-missing"
markers = [
    "integration: marks tests requiring a running Docker daemon",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
